--- a/books-for-runners.html
+++ b/books-for-runners.html
@@ -6,7 +6,7 @@
     <title>Book Recommendations for Runners</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="images/running-favicon.png" type="image/x-icon" alt="girl running emoji">
+    <link rel="shortcut icon" href="images/running-favicon.png" type="image/x-icon">
 
 
     <!-- <header>
