--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Emma's Running Blog</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="images/running-favicon.png" type="image/x-icon" alt="girl running emoji">
+    <link rel="shortcut icon" href="images/running-favicon.png" type="image/x-icon">
     
 
   </head>
@@ -29,7 +29,7 @@
     <h1>Emma's Running Blog</h1>
     <img class='third' src = "images/index-running-in-sunset.jpeg" alt ="girl running in the sunset">
     <img src = "images/index-running-on-track.jpeg" alt ="legs in background with trackfield in front">
-        <break><p>I like running in my spare time. Here are some random articles I wrote about running and nutrition.</p></break>
+        <p>I like running in my spare time. Here are some random articles I wrote about running and nutrition.</p>
       
 
       <ul>
