--- a/running-design.html
+++ b/running-design.html
@@ -6,7 +6,7 @@
     <title>How running makes me a better designer</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="images/running-favicon.png" type="image/x-icon" alt="girl running emoji">
+    <link rel="shortcut icon" href="images/running-favicon.png" type="image/x-icon">
     
 
   </head>
@@ -34,7 +34,7 @@
     <h2>Time for design podcasts and relaxation</h2>
         <p>I have found this time enormously valuable to catch up on design podcasts. My favorite podcast now is Design Better Podcast. Running outside clears my mind and gives me space to just relax.</p> 
     <h2>Reevaluation of “Failure”</h2>        
-        When Im down on my design work I can bounce back quickly, reevaluate my work, and brainstorm new ideas. I owe this resiliency in large part to running- one day you run your personal record, and the next week you injure your foot putting you out for weeks. Do you give up? No. You ice your injuries and strategize how you can prevent injury when you’re back on the run.</p>			
+        <p>When Im down on my design work I can bounce back quickly, reevaluate my work, and brainstorm new ideas. I owe this resiliency in large part to running- one day you run your personal record, and the next week you injure your foot putting you out for weeks. Do you give up? No. You ice your injuries and strategize how you can prevent injury when you’re back on the run.</p>			
     <h2>Running taught me discipline</h2>
         <h3>Perseverance when things are hard</h3> 
             <p>Running that last 5 miles in a 26 mile marathon, and continuing even when you hurt.</p>
