--- a/plant-based-runners.html
+++ b/plant-based-runners.html
@@ -5,7 +5,7 @@
     <title>Plant-based nutrition for Runners</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="images/running-favicon.png" type="image/x-icon" alt="girl running emoji">
+    <link rel="shortcut icon" href="images/running-favicon.png" type="image/x-icon">
     
 
   </head>
